--- a/src/app/merchandise/delivery/print-bill/packing-product-bill/packing-product-bill.component.html
+++ b/src/app/merchandise/delivery/print-bill/packing-product-bill/packing-product-bill.component.html
@@ -1,4 +1,4 @@
-<div id="print-ycgh-50-50-{{printBillData.index}}" [ngStyle]= "{'display': printBillData.visible ? 'block' : 'none' }">
+<div id="print-packing-product-50-50-{{printBillData.index}}" [ngStyle]= "{'display': printBillData.visible ? 'block' : 'none' }">
   <div class="page"  >
     <h1 style="text-align: center;"> GÓI HÀNG {{printBillData.index}} / {{printBillData.numOfBill}} </h1>
     <div class="arcode-section" style="text-align: center;">
