print delivery build

--- a/src/app/merchandise/delivery/print-bill/delivery-bill/delivery-bill.component.html
+++ b/src/app/merchandise/delivery/print-bill/delivery-bill/delivery-bill.component.html
@@ -1,5 +1,7 @@
-<div id="delivery-bill-grouped">
-  <div class="print-container" [ngStyle]="{'display': printData.visible ? 'block' : 'none' }">
+<!-- <div id="{{ printData.isDemo == true ? 'request-delivery-bill-demo' : 'delivery-bill-grouped' }} "> -->
+  <div id="delivery-bill-grouped">
+
+  <div class="print-container">
     <div class="page">
       <div class="subpage">
         <div class="header-print">
