--- a/src/app/merchandise/delivery/print-bill/delivery-request-bill/delivery-request-bill.component.html
+++ b/src/app/merchandise/delivery/print-bill/delivery-request-bill/delivery-request-bill.component.html
@@ -1,27 +1,27 @@
 <div id="print-ycvc-bill-50-50" style="display: none;" *ngIf="dataPrint">
   <div class="page"  >
-    <h1 style="text-align: center;"> GHN </h1>
+    <h1 style="text-align: center;" *ngIf="dataPrint.transporterName"> 
+      <strong> {{dataPrint.transporterName}}  </strong>
+    </h1>
     <div class="arcode-section" style="text-align: center;" *ngIf="dataPrint.transporterName">
       <ngx-barcode [bc-value]="dataPrint.transporterPackageNumber" bc-height="30" bc-font-size="15" bc-width="1.8"
         [bc-display-value]="true" [bc-margin-top]="1" [bc-margin-bottom]="1">
       </ngx-barcode>
     </div>
-    <div *ngIf="dataPrint.transporterName">
-      <strong> {{dataPrint.transporterName}}  </strong>
-    </div>
+
     <div class="delivery-request" >
       <div>{{dataPrint.contactName}} </div>
       <div>{{dataPrint.contactPhone}} </div>
       <div>
         {{dataPrint.address
-          + '-' + dataPrint.wardDisplay
-          + '-' + dataPrint.districtDisplay
-          + '-' + dataPrint.cityDisplay
-          + '-' + dataPrint.countryDisplay}}
+          + ' - ' + dataPrint.wardDisplay
+          + ' - ' + dataPrint.districtDisplay
+          + ' - ' + dataPrint.cityDisplay
+          + ' - ' + dataPrint.countryDisplay}}
       </div>
     </div>
     <div>
-      <span>COD: {{dataPrint.codAmount}} / Ship: {{dataPrint.totalAmount}} </span>
+      <span>COD: {{dataPrint.codAmount}} đ / Ship: {{dataPrint.totalAmount}} đ </span>
     </div>
   </div>
 </div>
