--- a/src/app/layouts/admin/admin-layout.component.html
+++ b/src/app/layouts/admin/admin-layout.component.html
@@ -161,7 +161,7 @@
                   <div *ngFor="let notification of lstNotification" class="notification-item" (click)="showDetailNotification(notification)">
                      <span class="type" tooltipPosition="bottom"  pTooltip="{{notification.typeDisplay}}" >( {{notification.typeDisplay}} )</span>
                      <span class="title" tooltipPosition="bottom" pTooltip="{{notification.title}}">{{notification.title}}</span>
-                     <span class="date" tooltipPosition="bottom" pTooltip="{{notification.createdDate | date: 'dd/MM/yyyy h:mm' }}">{{notification.createdDate | date: 'dd/MM/yyyy h:mm' }} </span>
+                     <span class="date" tooltipPosition="bottom" pTooltip="{{notification.createdDate | date: 'h:mm dd/MM/yyyy' }}">{{notification.createdDate | date: 'h:mm dd/MM/yyyy' }} </span>
                   </div>
                   <div class="checkbox">
                      <mat-checkbox [checked]="turnOffNotification" (change)="notificationSetting($event)" (click)="$event.stopPropagation()" >Không hiển thị lại đến khi có thông báo mới!</mat-checkbox>
