--- a/src/app/collaboration/collaboration-statistics/collaboration-statistics.component.scss
+++ b/src/app/collaboration/collaboration-statistics/collaboration-statistics.component.scss
@@ -28,6 +28,9 @@
     }
   }
 }
+.mr-bottom-12px{
+  margin-bottom: 12px;
+}
 
 .statistic {
   margin-top: 20px;
@@ -81,6 +84,21 @@
   }
 }
 
+.large-table{
+  display: block;
+}
+.small-table{
+  display: none;
+}
+@media screen and ( max-width: 576px ) {
+  .large-table{
+    display: none !important;
+  }
+  .small-table{
+    display: block !important;
+  }
+}
+
 .statistic-table {
   margin-bottom: 20px;
   background: #fff;
@@ -121,6 +139,11 @@
       margin-bottom: 12px;
       .count{
         font-size: 24px;
+      }
+    }
+    @media screen and ( max-width: 576px ) {
+      .statistic-item{
+        max-width: 50% !important;
       }
     }
   }
