--- a/src/app/layouts/admin/notification-detail/notification-detail.component.scss
+++ b/src/app/layouts/admin/notification-detail/notification-detail.component.scss
@@ -1,32 +1,68 @@
-.header {
-  margin-bottom: 24px;
-  font-weight: bold;
-  border-bottom: 4px solid #f44335;
-  width: fit-content;
-  padding-bottom: 3px;
-  .title {
-    font-size: 16px;
-    color: #f44335;
-    text-transform: uppercase;
-  }
-}
-.notification {
-  div{
-    margin-bottom: 16px;
-  }
-  .content{
-    background: #dee2e6;
-    padding: 12px;
-    border-radius: 4px;
-  }
-}
-
-.footer {
+:host{
   display: flex;
-  justify-content: flex-end;
-  border-top: 1px solid #ddd;
-  padding-top: 20px;
-  max-width: 220px;
-  float: right;
-  min-width: 200px;
+  flex-direction: column;
+  height: 100%;
+  flex-direction: column;
+  .header {
+    margin-bottom: 24px;
+    font-weight: bold;
+    border-bottom: 4px solid #f44335;
+    width: fit-content;
+    padding-bottom: 3px;
+    .title {
+      font-size: 16px;
+      color: #f44335;
+      text-transform: uppercase;
+    }
+  }
+  .notification {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    div{
+      margin-bottom: 16px;
+      &:first-child{
+
+      }
+    }
+    .content{
+      background: #dee2e6;
+      padding: 12px;
+      border-radius: 4px;
+      flex: 1;
+      max-height: calc( 100vh - 300px);
+      overflow: auto;
+      ::ng-deep{
+        h1{
+          font-size: 24px;
+        }
+        h2{
+          font-size: 20px;
+        }
+        h3{
+          font-size: 18px;
+          line-height: 28px;
+        }
+        h4{
+          font-size: 16px;
+        }
+        h5{
+          font-size: 14px;
+        }
+        th,td{
+          padding: 12px;
+        }
+      }
+    }
+  }
+  
+  .footer {
+    display: flex;
+    justify-content: flex-end;
+    border-top: 1px solid #ddd;
+    padding-top: 20px;
+    float: right;
+    min-width: 200px;
+  }
+  
 }
